# libapp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  dmitigr_libs-config.cmake  dmitigr_libs.cmake
cmake/cmake/: FindGpiod.cmake  FindPq.cmake  FindUv.cmake  dmitigr.cmake  dmitigr_librarian.cmake  dmitigr_libs-config.cmake  dmitigr_libs.cmake
cmake/src/: dll.hpp.in  lib.cpp.in  lib_version.cpp.in  lib_version.hpp.in  version.hpp.in  version.rc.in
cmake/tool/: igrilibs_copy
src/dmitigr/base/: algorithm.hpp  assert.hpp  assoc_vector.hpp  base.hpp  basics.hpp  buffer.hpp  chrono.hpp  concepts.hpp  endianness.hpp  enum.hpp  error.hpp  exceptions.hpp  fifo.hpp  filesystem.hpp  hash.hpp  ipc.hpp  log.hpp  math.hpp  memory.hpp  noncopymove.hpp  ret.hpp  rnd.hpp  stack.hpp  str.h  str.hpp  stream.hpp  string_vector.hpp  thread.hpp  traits.hpp  utility.hpp
src/dmitigr/base/cmake/: dmitigr_base.cmake
src/dmitigr/base/doc/: README.md
src/dmitigr/base/test/: base-log.cpp  base-rnd.cpp  base-unit-assoc_vector.cpp  base-unit-buffer.cpp  base-unit-chrono.cpp  base-unit-fifo_array.cpp  base-unit-fifo_string.cpp  base-unit-filesystem.cpp  base-unit-hash.cpp  base-unit-math.cpp  base-unit-stack.cpp  base-unit-str.cpp  base-unit-thread.cpp  base-unit-thread_pin.cpp  base-unit-thread_pool.cpp  base-utility.cpp
src/dmitigr/dt/: basics.hpp  dt.hpp  exceptions.hpp  timestamp.hpp  types_fwd.hpp  version.hpp
src/dmitigr/fcgi/: basics.cpp  basics.hpp  connection.hpp  dll.hpp  exceptions.hpp  fcgi.cpp  fcgi.hpp  lib_version.cpp  lib_version.hpp  listener.cpp  listener.hpp  listener_options.cpp  listener_options.hpp  server_connection.cpp  server_connection.hpp  server_connection_stacked.cpp  streambuf.cpp  streambuf.hpp  streams.cpp  streams.hpp  types_fwd.hpp  version.hpp  version.rc
src/dmitigr/gpio/: exceptions.hpp  gpio.hpp  version.hpp
src/dmitigr/http/: basics.hpp  client.hpp  connection.hpp  cookie.hpp  date.hpp  errc.hpp  errctg.hpp  exceptions.hpp  header.hpp  http.hpp  server.hpp  set_cookie.hpp  syntax.hpp  types_fwd.hpp  version.hpp
src/dmitigr/io/: acceptor.hpp  async_agent.hpp  connection.hpp  endpoint.hpp  io.hpp  shard.hpp
src/dmitigr/jrpc/: basics.hpp  errc.hpp  errctg.hpp  exceptions.hpp  jrpc.hpp  request.hpp  response.hpp  types_fwd.hpp
src/dmitigr/lisp/: README.md  errc.hpp  errctg.hpp  expr.hpp  lib.hpp  lisp.hpp  parser.hpp  types_fwd.hpp
src/dmitigr/mac/: cf.hpp  io.hpp  mac.hpp
src/dmitigr/math/: alignment.hpp  exceptions.hpp  interval.hpp  math.hpp  statistic.hpp  version.hpp
src/dmitigr/msg/: conveyor.hpp  database.hpp  errc.hpp  errctg.hpp  exceptions.hpp  mail_processor.hpp  message.hpp  msg.hpp  processor.hpp  sqlite_conveyor.hpp  types_fwd.hpp
src/dmitigr/mulf/: .gitattributes  exceptions.hpp  form_data.hpp  mulf.hpp  version.hpp
src/dmitigr/net/: address.hpp  basics.hpp  client.hpp  conversions.hpp  descriptor.hpp  endpoint.hpp  errctg.hpp  exceptions.hpp  last_error.hpp  listener.hpp  net.hpp  socket.hpp  types_fwd.hpp  util.hpp  version.hpp
src/dmitigr/nix/: cpu.hpp  detach.hpp  dl.hpp  error.hpp  ifaddrs.hpp  ipc_pipe.hpp  nix.hpp  process.hpp  sysctl.hpp
src/dmitigr/os/: basics.hpp  environment.hpp  error.hpp  exceptions.hpp  last_error.hpp  os.hpp  pid.hpp  smbios.hpp  types_fwd.hpp  version.hpp  windows.hpp
src/dmitigr/pg/: msg.hpp  pg.hpp
src/dmitigr/pgfe/: README.md  aio.hpp  array_aliases.hpp  array_conversions.hpp  basic_conversions.hpp  basics.hpp  completion.cpp  completion.hpp  composite.cpp  composite.hpp  compositional.cpp  compositional.hpp  connection.cpp  connection.hpp  connection_options.cpp  connection_options.hpp  connection_pool.cpp  connection_pool.hpp  contract.hpp  conversions.hpp  conversions_api.hpp  copier.cpp  copier.hpp  data.cpp  data.hpp  dll.hpp  errc.cpp  errc.hpp  errctg.cpp  errctg.hpp  error.cpp  error.hpp  exceptions.cpp  exceptions.hpp  large_object.cpp  large_object.hpp  lib_version.cpp  lib_version.hpp  message.hpp  misc.cpp  (+34 more)
src/dmitigr/pgfex/: connection_options.hpp  pgfex.hpp  rajson.hpp
src/dmitigr/prg/: command.hpp  info.hpp  prg.hpp  util.hpp
src/dmitigr/rajson/: conversions.hpp  conversions_enum.hpp  document.hpp  emplace.hpp  errc.hpp  errctg.hpp  exceptions.hpp  fwd.hpp  path.hpp  rajson.hpp  rapidjson.hpp  value_view.hpp
src/dmitigr/sqlixx/: connection.hpp  conversions.hpp  data.hpp  errctg.hpp  exceptions.hpp  sqlixx.hpp  statement.hpp  version.hpp
src/dmitigr/str/: basics.hpp  c_str.h  c_str.hpp  exceptions.hpp  line.hpp  numeric.hpp  predicate.hpp  sequence.hpp  str.h  str.hpp  stream.hpp  substr.hpp  transform.hpp  walker.hpp
src/dmitigr/tpl/: generic.hpp  parameter.hpp  tpl.hpp  types_fwd.hpp  version.hpp
src/dmitigr/url/: exceptions.hpp  query_string.hpp  url.hpp  version.hpp
src/dmitigr/uv/: uv.hpp
src/dmitigr/web/: basics.hpp  config.hpp  errc.hpp  errctg.hpp  exceptions.hpp  http.hpp  lisp.hpp  rajson.hpp  util.hpp  version.hpp  web.hpp  wsjrpc.hpp
src/dmitigr/winbase/: account.hpp  combase.hpp  dialog.hpp  error.hpp  exceptions.hpp  hguard.hpp  hlocal.hpp  ipc_wm.hpp  iphelper.hpp  job.hpp  menu.hpp  netman.hpp  process.hpp  processenv.hpp  program.hpp  registry.hpp  resource.hpp  security.hpp  service.hpp  shell.hpp  strconv.hpp  sync.hpp  sysinfo.hpp  userenv.hpp  windows.hpp  winsta.hpp  wow64.hpp  wts.hpp
src/dmitigr/wincom/: enumerator.hpp  exceptions.hpp  firewall.hpp  library.hpp  object.hpp  rdp.hpp  rdpts.hpp  tasc.hpp  wmi.hpp
src/dmitigr/winole/: site.hpp
src/dmitigr/ws/: README.md  basics.hpp  connection.cpp  connection.hpp  dll.hpp  exceptions.hpp  http_io.cpp  http_io.hpp  http_request.cpp  http_request.hpp  lib_version.cpp  lib_version.hpp  server.cpp  server.hpp  server_options.cpp  server_options.hpp  types_fwd.hpp  util.hpp  uwebsockets.hpp  version.hpp  version.rc  ws.cpp  ws.hpp
src/dmitigr/wscl/: basics.hpp  connection.cpp  connection.hpp  connection_options.cpp  connection_options.hpp  dll.hpp  exceptions.hpp  lib_version.cpp  lib_version.hpp  version.hpp  version.rc  wscl.cpp  wscl.hpp
(+143 files in other folders)
